# htty

./: .gitignore  .swo  .swp  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  debug-workspace.nix  debug_events.py  flake.nix  pyproject.toml  pyrightconfig.json  pytest.ini  result  ruff.toml  steps.sh  test.sh  test_basic.py
.github/actions/setup-nix/: action.yml
.github/workflows/: release.yml  test.yml  tests.yml
agent-primers/: README.md  ci-workflow.md  codegen.md  packaging.md  process_coordination.md  pytest.md  testing.md
common/: pyright.toml  ruff.toml
docs/: htty.html  index.html  search.js
docs/htty-core/: htty_core.html  search.js
docs/htty-core-templates/: module.html.jinja2
docs/htty-core.g/: htty_core.html  index.html  search.js
docs/htty.g/: htty.html  search.js
docs/templates/: module.html.jinja2  theme.css
htty/: README.md  pyproject.toml
htty-core/: Cargo.toml  README.md  pyproject.toml
htty-core/src/python/htty_core/: __init__.py  constants.py  core.py
htty-core/src/rust/: cli.rs  command.rs  constants.rs  main.rs  pty.rs  session.rs
htty-core/src/rust/api/: http.rs  stdio.rs
htty/src/htty/: __init__.py  _find_ht.py  cli.py  constants.py  core.py  ht.py  keys.py
nix/: devshell.nix
nix/devshells/: default.nix  pytest-cli.nix  pytest-core.nix  pytest-empty.nix  pytest-full.nix  pytest-htty.nix  pytest-sdist.nix  pytest-wheel.nix  pytest.nix
nix/lib/: checks.nix  cog-env.nix  constants.nix  default.nix  pytest-shell.nix  testcfg.nix  version.nix
notes/: packaging.md  process_coordination.md  testing.md
py-envs/htty/: pyproject.toml
py-envs/sdist/: pyproject.toml
pylib-env/: pyproject.toml
python/htty/: __init__.py  __main__.py  _find_ht.py  cli.py  core.py  html_utils.py  keys.py
src/: api.rs  cli.rs  command.rs  lib.rs  main.rs  pty.rs  python.rs  session.rs
src/api/: http.rs  stdio.rs
src/python/htty/: __init__.py  _find_ht.py  cli.py  core.py  keys.py
src/rust/: api.rs  cli.rs  lib.rs  main.rs  session.rs
src/rust/api/: stdio.rs
tests/: conftest.py  pyproject.toml
tests/cli_tests/: test_htty_cli.py
tests/env_tests/: __init__.py  test_cli.py  test_import.py  test_nix.py  test_packages.py  test_wheel.py
tests/lib_tests/: test_help_freshness.py  test_htty.py  test_htty_core.py
tests/py_unit_tests/: test_args.py
