[project]
name = "htty"
version = "0.3.0"
description = "Headless Terminal - Python library for terminal automation (ht fork)"
readme = "README.md"
authors = [
    { name = "Matt Rixman", email = "MatrixManAtYrService@users.noreply.github.com" },
]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["terminal", "automation", "pty", "headless", "subprocess"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
]
dependencies = [
    "ansi2html",
]

[project.urls]
Homepage = "https://github.com/MatrixManAtYrService/ht"
Documentation = "https://github.com/MatrixManAtYrService/ht"
Repository = "https://github.com/MatrixManAtYrService/ht"
Issues = "https://github.com/MatrixManAtYrService/ht/issues"

[build-system]
requires = ["maturin>=1.3.2"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"
python-source = "src/python"
strip = true
include = [
    { path = "src/python/htty/scripts/htty", format = ["wheel", "sdist"] }
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "maturin>=1.3.2",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
]

fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["htty"]
force-single-line = false
combine-as-imports = true
