[package]
name = "htty_core"
# [[[cog
# import os
# cog.out(f'version = "{os.environ["HTTY_VERSION"]}"')
# ]]]
version = "0.2.4"
# [[[end]]]
edition = "2021"
rust-version = "1.74"
license = "MIT"
homepage = "https://github.com/MatrixManAtYrService/ht"
repository = "https://github.com/MatrixManAtYrService/ht"
readme = "README.md"
description = "Headless Terminal (htty fork)"

[lib]
name = "htty_core"
crate-type = ["cdylib"]
path = "src/rust/lib.rs"

[[bin]]
name = "ht"
path = "src/rust/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avt = "0.11.1"
nix = { version = "0.28.0", features = ["term", "process", "fs", "signal"] }
serde_json = "1.0.117"
mio = { version = "0.8.11", features = ["os-poll", "os-ext"] }
anyhow = "1.0.81"
serde = "1.0.203"
tokio = { version = "1.38.0", features = ["full"] }
axum = { version = "0.7.5", default-features = false, features = ["http1", "ws", "query"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
futures-util = "0.3.30"
rust-embed = "8.4.0"
mime_guess = "2.0.5"
tempfile = "3.10"

# Python binding dependencies (commented out - using subprocess approach)
# pyo3 = { version = "0.21", features = ["extension-module"], optional = true }
# which = { version = "4.2", optional = true }
# html-escape = { version = "0.2", optional = true }
# shell-words = { version = "1.1", optional = true }

[features]
default = []
# python = ["pyo3", "which", "html-escape", "shell-words"]

[profile.release]
strip = true
