[project]
name = "htty_core"
# [[[cog
# import os
# cog.out(f'version = "{os.environ["HTTY_VERSION"]}"')
# ]]]
version = "0.2.13"
# [[[end]]]
description = "Headless Terminal - Rust binary for terminal automation"
readme = "README.md"
authors = [
    { name = "Matt Rixman", email = "MatrixManAtYrService@users.noreply.github.com" },
]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["terminal", "automation", "pty", "headless", "subprocess"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/MatrixManAtYrService/ht"
Documentation = "https://github.com/MatrixManAtYrService/ht"
Repository = "https://github.com/MatrixManAtYrService/ht"
Issues = "https://github.com/MatrixManAtYrService/ht/issues"

[build-system]
requires = ["maturin>=1.3.2"]
build-backend = "maturin"

[dependency-groups]
analysis = [
    "fawltydeps",
]

[tool.maturin]
python-source = "src/python"
strip = true
bindings = "bin"
include = [
    { path = "target/release/ht", format = "wheel" }
]