[project]
name = "htty-test-env"
version = "0.1.0"
description = "Test environment for htty wheel testing - dependency specification only"
requires-python = ">=3.8"

# Test dependencies only - htty will be provided by htty-pylib
dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    # htty is provided separately by htty-pylib input
]

# Build system configuration to prevent setuptools from treating test directories as packages
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Explicitly specify what to include - just the pyproject.toml and conftest.py, no test directories as packages
[tool.hatch.build.targets.wheel]
sources = []
packages = []
include = [
    "pyproject.toml",
    "conftest.py"
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test_*.py"
# Keep live logging enabled for debugging hanging tests
log_cli = true
log_cli_level = "WARNING"  # Only show warnings and errors by default
log_cli_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_auto_indent = true
# Custom marks for different test environments
markers = [
    "wheel: tests that require the htty wheel with ht binary",
    "sdist: tests that run with pure Python source distribution (no ht binary)"
]
