[project]
name = "htty"
version = "0.3.0"
description = "Headless Terminal - Python library for terminal automation (Python-only)"
readme = "README.md"
authors = [
    { name = "Matt Rixman", email = "MatrixManAtYrService@users.noreply.github.com" },
]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["terminal", "automation", "pty", "headless", "subprocess"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
]
dependencies = [
    "ansi2html",
]

[project.urls]
Homepage = "https://github.com/MatrixManAtYrService/ht"
Documentation = "https://github.com/MatrixManAtYrService/ht"
Repository = "https://github.com/MatrixManAtYrService/ht"
Issues = "https://github.com/MatrixManAtYrService/ht/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/python/htty"]

[tool.hatch.build.targets.wheel]
packages = ["src/python/htty"] 